settings top alignment fix

--- a/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
+++ b/foxtrot-server/src/main/resources/console/echo/css/foxtrot.css
@@ -831,7 +831,7 @@ path {
   width: 170px;
   height: 34px;
   position: relative;
-  top: 22px;
+  top: 12px;
   right: 43px;
   background: #fff;
 }
